# cruel_world

./: .gitignore  CMakeLists.txt  README.md  plan.md  prd.md
.github/workflows/: build.yaml
designs/: design-0.md  design-1-rename.md
include/journal/: app.hpp  config.hpp  crypto_engine.hpp  db.hpp  session_manager.hpp
src/: app.cpp  app.hpp  app_test.cpp  config.cpp  config.hpp  config_test.cpp  crypto_engine.cpp  crypto_test.cpp  db.cpp  db_test.cpp  main.cpp  session_manager.cpp  session_test.cpp
static/: style.css
templates/: attachments.html  editor.html  layout.html  setup.html  unlock.html
